[gd_scene load_steps=9 format=3 uid="uid://cprjjm5h4ekcu"]

[ext_resource type="Script" path="res://Scenes/game.gd" id="1_m7lfg"]
[ext_resource type="Texture2D" uid="uid://b0u42srl3unx5" path="res://Assets/Crops/Wheat/Wheat Unclicked.png" id="2_qfkpi"]
[ext_resource type="Texture2D" uid="uid://dh7odd7vqm0xs" path="res://Assets/Crops/Wheat/Wheat Clicked.png" id="3_t7da6"]
[ext_resource type="Script" path="res://Scenes/counter.gd" id="3_uxv5b"]
[ext_resource type="Texture2D" uid="uid://diqah7muje2fc" path="res://Assets/Crops/Carrot/Carrot Unclicked.png" id="4_3rv3r"]
[ext_resource type="Texture2D" uid="uid://4wqllivhmoux" path="res://Assets/Crops/Carrot/Carrot Clicked.png" id="5_32rep"]
[ext_resource type="Texture2D" uid="uid://bdumbr324blrr" path="res://Assets/Locked Button.png" id="6_gv8u2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bvnvf"]
bg_color = Color(0.263818, 0.245077, 0.762477, 1)

[node name="game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m7lfg")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bvnvf")

[node name="Wheat" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 150.0
offset_right = -637.0
offset_bottom = -398.0
grow_horizontal = 2
grow_vertical = 2

[node name="WheatButton" type="TextureButton" parent="Wheat"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
texture_normal = ExtResource("2_qfkpi")
texture_pressed = ExtResource("3_t7da6")
ignore_texture_size = true
stretch_mode = 0

[node name="WheatProfit" type="Label" parent="Wheat"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "1 Space Money"

[node name="Carrot" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -64.0
offset_right = 515.0
offset_bottom = 36.0
grow_vertical = 2

[node name="CarrotButton" type="TextureButton" parent="Carrot"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
disabled = true
texture_normal = ExtResource("4_3rv3r")
texture_pressed = ExtResource("5_32rep")
texture_disabled = ExtResource("6_gv8u2")
stretch_mode = 0

[node name="CarrotUnlock" type="Button" parent="Carrot"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
text = "Unlock for 25 Space Money"

[node name="Counter" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 1.0
offset_bottom = 55.0
grow_horizontal = 2
script = ExtResource("3_uxv5b")

[node name="SpaceMoneyLable" type="Label" parent="Counter"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0 Space Money"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Crops" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 68.0
offset_right = -613.0
offset_bottom = -522.0
grow_horizontal = 2
grow_vertical = 2

[node name="CropsLable" type="Label" parent="Crops"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Crops"
horizontal_alignment = 1

[connection signal="profit_changed" from="." to="Counter" method="_on_game_profit_changed"]
[connection signal="button_down" from="Wheat/WheatButton" to="." method="_on_wheat_button_button_down"]
[connection signal="button_down" from="Carrot/CarrotButton" to="." method="_on_carrot_button_button_down"]
[connection signal="pressed" from="Carrot/CarrotUnlock" to="." method="_on_carrot_unlock_pressed"]
